hs-bindgen/examples/failing/selection_bad.h
#include <selection_bad_size_t.h>

#define A int

// Use of macro here, so must be reparsed
void f(A x, size_t y);
